Add complete path

--- a/sample/index.html
+++ b/sample/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
   <h1>Agile Audio Player - Sample Implementation</h1>
-  <audio id="audioPlayer" controls="true" />
+  <audio id="audioPlayer" controls="true" style="width:400px; height:100px;" />
 </body>
-<script type="text/javascript" src="../dist/agile-audio-player.min.js"></script>
+<script type="text/javascript" src="https://uux-brasil.github.io/dist/agile-audio-player.min.js"></script>
 <script type="text/javascript">
   var mp3 = 'http://www.stephaniequinn.com/Music/Allegro%20from%20Duet%20in%20C%20Major.mp3';
   var m3u = 'http://net1.cope.stream.flumotion.com/cope/net1.mp3.m3u'; 
